# Arduino-Nano33BLE-Sense-Rev1_to_Blender-MCP-

./: .env.example  .gitignore  README.md  addon.py  arduino_sensor_sender.ino  arduino_sensor_test.ino  docker-compose.yml  env_utils.py  influx_mqtt_publisher.py  mqtt_blender_bridge.py  pyproject.toml  sensor_presets.json  serial_bridge.py  server.py
Blender/: case_mod.blend  test.blend  test_data.md
Handoff/: blender_mcp_sensor_handoff.md
arduino_sensor_scanner/: arduino_sensor_scanner.ino
arduino_sensor_sender/: arduino_sensor_sender.ino
mosquitto/config/: mosquitto.conf
uno_q_app_lab_blender/: main.py  sketch.ino  udp_bridge.py
