[project]
name = "blender-mcp"
version = "1.0.0"
description = "MCP (Model Context Protocol) server for Blender — control Blender via AI with sensor data visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

