[project]
name = "blender-mcp"
version = "1.0.0"
description = "MQTT sensor bridge for driving Blender digital twins from InfluxDB sensor data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
